; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/bfa/extr_bfad.c_bfad_drv_uninit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/bfa/extr_bfad.c_bfad_drv_uninit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfad_s = type { i32, i32, i32, i32, i32 }

@BFAD_DRV_INIT_DONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bfad_drv_uninit(%struct.bfad_s* %0) #0 {
  %2 = alloca %struct.bfad_s*, align 8
  %3 = alloca i64, align 8
  store %struct.bfad_s* %0, %struct.bfad_s** %2, align 8
  %4 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %5 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %4, i32 0, i32 4
  %6 = load i64, i64* %3, align 8
  %7 = call i32 @spin_lock_irqsave(i32* %5, i64 %6)
  %8 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %9 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %8, i32 0, i32 3
  %10 = call i32 @init_completion(i32* %9)
  %11 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %12 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %11, i32 0, i32 1
  %13 = call i32 @bfa_iocfc_stop(i32* %12)
  %14 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %15 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %14, i32 0, i32 4
  %16 = load i64, i64* %3, align 8
  %17 = call i32 @spin_unlock_irqrestore(i32* %15, i64 %16)
  %18 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %19 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %18, i32 0, i32 3
  %20 = call i32 @wait_for_completion(i32* %19)
  %21 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %22 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %21, i32 0, i32 2
  %23 = call i32 @del_timer_sync(i32* %22)
  %24 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %25 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %24, i32 0, i32 1
  %26 = call i32 @bfa_isr_disable(i32* %25)
  %27 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %28 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %27, i32 0, i32 1
  %29 = call i32 @bfa_detach(i32* %28)
  %30 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %31 = call i32 @bfad_remove_intr(%struct.bfad_s* %30)
  %32 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %33 = call i32 @bfad_hal_mem_release(%struct.bfad_s* %32)
  %34 = load i32, i32* @BFAD_DRV_INIT_DONE, align 4
  %35 = xor i32 %34, -1
  %36 = load %struct.bfad_s*, %struct.bfad_s** %2, align 8
  %37 = getelementptr inbounds %struct.bfad_s, %struct.bfad_s* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = and i32 %38, %35
  store i32 %39, i32* %37, align 4
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @init_completion(i32*) #1

declare dso_local i32 @bfa_iocfc_stop(i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @wait_for_completion(i32*) #1

declare dso_local i32 @del_timer_sync(i32*) #1

declare dso_local i32 @bfa_isr_disable(i32*) #1

declare dso_local i32 @bfa_detach(i32*) #1

declare dso_local i32 @bfad_remove_intr(%struct.bfad_s*) #1

declare dso_local i32 @bfad_hal_mem_release(%struct.bfad_s*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
